# CHIPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: chipc_utility.c  chipc_utility.h  cpu.c  cpu.h  instruction.c  instruction.h  instruction_functions.h  main.c  stack.c  stack.h  utility.h
src/instruction_functions/: fetch.c  op_0.c  op_1.c  op_2.c  op_3.c  op_4.c  op_5.c  op_6.c  op_7.c  op_8.c  op_9.c  op_A.c  op_B.c  op_C.c  op_D.c
src/utility/: filesize.c  format.c  utility.h
tests/: CMakeLists.txt  filesize.c  format.c  stacktest.c
